unpackaged/objects/CSReport__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>回答／メモ</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>対象エリア</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>アメリカ大陸</fullName>
                </value>
                <value>
                    <fullName>ヨーロッパ</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSKubun__c</fullName>
        <label>CS分類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>苦情</fullName>
                </value>
                <value>
                    <fullName>Thank you</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>対象地区</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会社名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CS報告</relationshipLabel>
        <relationshipName>CS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ComplaintLevel__c</fullName>
        <label>苦情度</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CSKubun__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>高</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>低</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Area__c</fullName>
        <label>対象管轄地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HasseiCountry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>華北西部</fullName>
                </value>
                <value>
                    <fullName>華北東部</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>江蘇</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
                <value>
                    <fullName>トロント</fullName>
                </value>
                <value>
                    <fullName>メキシコシティ</fullName>
                </value>
                <value>
                    <fullName>サンパウロ</fullName>
                </value>
                <value>
                    <fullName>パリ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisions__c</fullName>
        <label>所属部門</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>営業</fullName>
                </value>
                <value>
                    <fullName>総合サービス</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>ブローカー</fullName>
                </value>
                <value>
                    <fullName>ダイナプロ</fullName>
                </value>
                <value>
                    <fullName>ILA</fullName>
                </value>
                <value>
                    <fullName>業務統括部</fullName>
                </value>
                <value>
                    <fullName>人事総務</fullName>
                </value>
                <value>
                    <fullName>財務</fullName>
                </value>
                <value>
                    <fullName>システム</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasseiArea__c</fullName>
        <label>発生地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HasseiCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>塘沽</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>嘉興</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
                <value>
                    <fullName>十堰</fullName>
                </value>
                <value>
                    <fullName>襄陽</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
                <value>
                    <fullName>張家港</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasseiCountry__c</fullName>
        <label>対象国</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>マカオ</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>大韓民国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>バングラデシュ</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>イタリア</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>チェコ</fullName>
                </value>
                <value>
                    <fullName>ポーランド</fullName>
                </value>
                <value>
                    <fullName>オーストラリア</fullName>
                </value>
                <value>
                    <fullName>ニュージーランド</fullName>
                </value>
                <value>
                    <fullName>パプアニューギニア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>会員番号</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naiyo__c</fullName>
        <label>内容</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>所属事務所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>対策／コメント</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceiptDate__c</fullName>
        <label>受理日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <label>報告者氏名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedHouhouOther__c</fullName>
        <inlineHelpText>入手手段に 「その他」を選択した場合に詳細を記入してください</inlineHelpText>
        <label>入手手段（その他）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedHouhou__c</fullName>
        <label>入手手段</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>来社</fullName>
                </value>
                <value>
                    <fullName>電話</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>メール</fullName>
                </value>
                <value>
                    <fullName>アテンド時</fullName>
                </value>
                <value>
                    <fullName>営業時</fullName>
                </value>
                <value>
                    <fullName>AC電話</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportArea__c</fullName>
        <label>報告地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ReportCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>塘沽</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
                <value>
                    <fullName>十堰</fullName>
                </value>
                <value>
                    <fullName>襄陽</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>厦門</fullName>
                </value>
                <value>
                    <fullName>恵州</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportCountry__c</fullName>
        <label>報告国</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shimei__c</fullName>
        <label>氏名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetKubunDetail__c</fullName>
        <label>対象区分詳細</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>スタッフの対応</fullName>
                </value>
                <value>
                    <fullName>サービス全般</fullName>
                </value>
                <value>
                    <fullName>職員の対応</fullName>
                </value>
                <value>
                    <fullName>施設環境・ルール</fullName>
                </value>
                <value>
                    <fullName>治療内容</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetKubun__c</fullName>
        <label>対象区分</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB</fullName>
                </value>
                <value>
                    <fullName>病院</fullName>
                </value>
                <value>
                    <fullName>委託業者</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetOther__c</fullName>
        <inlineHelpText>対象詳細に 「その他」を選択した場合は詳細記入してください</inlineHelpText>
        <label>対象詳細（その他）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>件名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CS報告</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReportArea__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptDate__c</columns>
        <columns>CompanyName__c</columns>
        <columns>TargetKubun__c</columns>
        <columns>Title__c</columns>
        <columns>TargetKubunDetail__c</columns>
        <columns>ComplaintLevel__c</columns>
        <columns>CSKubun__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>CS報告番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>